--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</a>
 
 		<hgroup>
-		  <h1 class="header-author"><a href="/">wandergis</a></h1>
+		  <h1 class="header-author"><a href="/">WanderGIS</a></h1>
 		</hgroup>
 
 		
@@ -149,7 +149,7 @@
       <nav id="mobile-nav">
   	<div class="overlay">
   		<div class="slider-trigger"></div>
-  		<h1 class="header-author js-mobile-header hide">wandergis</h1>
+  		<h1 class="header-author js-mobile-header hide">WanderGIS</h1>
   	</div>
 	<div class="intrude-less">
 		<header id="header" class="inner">
@@ -157,7 +157,7 @@
 				<img lazy-src="/img/wandergis.png" class="js-avatar">
 			</div>
 			<hgroup>
-			  <h1 class="header-author">wandergis</h1>
+			  <h1 class="header-author">WanderGIS</h1>
 			</hgroup>
 			
 			<p class="header-subtitle">记忆的残骸的个人博客</p>
@@ -380,7 +380,7 @@
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
-    		&copy; 2015 wandergis
+    		&copy; 2015 WanderGIS
     	</div>
       	<div class="footer-right">
       		<a href="http://hexo.io/" target="_blank">Hexo</a>  主题 <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
