--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
     
     <div class="article-entry" itemprop="articleBody">
       
-        <p>#gulp使用备忘指南</p>
-<h2 id="1-_gulp安装">1. gulp安装</h2><p>首先你需要有一个node环境<br><figure class="highlight sql"><table><tr><td class="gutter"><pre><span class="line">1</span><br></pre></td><td class="code"><pre><span class="line">npm <span class="operator"><span class="keyword">install</span> gulp -<span class="keyword">g</span></span></span><br></pre></td></tr></table></figure></p>
+        <h1 id="gulp使用备忘指南">gulp使用备忘指南</h1><h2 id="1-_gulp安装">1. gulp安装</h2><p>首先你需要有一个node环境<br><figure class="highlight sql"><table><tr><td class="gutter"><pre><span class="line">1</span><br></pre></td><td class="code"><pre><span class="line">npm <span class="operator"><span class="keyword">install</span> gulp -<span class="keyword">g</span></span></span><br></pre></td></tr></table></figure></p>
 <p>这样会有一个全局的gulp的cli命令</p>
 <h2 id="2-_gulp项目中使用">2. gulp项目中使用</h2><ol>
 <li>在项目的根目录新建一个gulpfile.js的文件<code>touch gulpfile.js</code></li>
